[metadata]
name = drivetorch
version = 0.1.0
description = A small library for loading and using PyTorch libraries from disk.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mathewhuen/drivetorch
author = Mathew Huerta-Enochian
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
packages=
    drivetorch
install_requires=
    numpy
    zarr

[aliases]
test=pytest

[options.extras_require]
test =
    pytest

